syntax = "proto3";

package pb;

option go_package = "./;pb";


message SignupReq {
    string email = 1;
    string password = 2;
}

message LoginReq {
    string email = 1;
    string password = 2;
}

message AuthRes {
    string email = 1;
    string role = 2;
}

service AuthService {
    rpc Signup (SignupReq) returns (AuthRes) {};
    rpc Login (LoginReq) returns (AuthRes) {};
}